@@ -10,4 +10,6 @@
   </parent>
   <special class="id2">old special2</special>
   <special class="id3">old special3</special>
+  <special2 class="id5">old special4</special2>
+  <special2 class="id7">old special5</special2>
 </root>
